--- a/index.html
+++ b/index.html
@@ -18,15 +18,27 @@
       <img src='img/x_logo.svg'/>
   </header>
 
-  <aside>
+  <div class='main-container'>
+    <aside>
 
-  </aside>
+    </aside>
 
-  <article class="container">
-
-
-  </article>
-
+    <article class="container">
+      <div class=table-wrapper>
+      <table class='table'>
+        <th></th>
+        <th>Hardware</th>
+        <th>Deployment</th>
+        <th><p>Nodes</p></th>
+        <th><p>CPU</p></th>
+        <th><p>Memory</p></th>
+        <th><p>Storage</p></th>
+        <th><p>License Cost</p></th>
+        <th><p>Actions</p></th>
+      </table>
+      </div>
+    </article>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
